<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movieDetail"
            type="com.vanskarner.cleanmovie.ui.movie.MovieDetailModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerFavoriteDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/backgroundImage"
                imageDetailBase64="@{movieDetail.backgroundImage}"
                android:layout_width="0dp"
                android:layout_height="@dimen/detail_image_height"
                android:contentDescription="@string/detail_image_tag"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/backgroundImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/transparent_background"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/medium_spacing"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="3"
                        android:text="@{movieDetail.basicModel.title}"
                        android:textColor="@color/white"
                        android:textSize="@dimen/large_text_size"
                        android:textStyle="bold"
                        tools:text="@tools:sample/lorem/random" />

                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardVoteAverage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:cardBackgroundColor="@color/transparent_background"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvVoteAverage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/medium_spacing"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLength="3"
                    android:maxLines="1"
                    android:text="@{String.valueOf(movieDetail.voteAverage)}"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:drawableLeftCompat="@drawable/ic_star_border_24"
                    tools:text="9.5" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/releaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:drawablePadding="@dimen/small_spacing"
                android:gravity="center"
                android:maxLength="15"
                android:maxLines="1"
                android:text="@{movieDetail.releaseDate}"
                app:drawableLeftCompat="@drawable/ic_calendar_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/backgroundImage"
                tools:text="@tools:sample/date/ddmmyy" />

            <TextView
                android:id="@+id/informationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/information"
                android:textAllCaps="true"
                android:textSize="@dimen/medium_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/releaseDate" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_spacing"
                android:text="@{movieDetail.overview}"
                android:textSize="@dimen/small_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/informationTextView"
                tools:text="@tools:sample/lorem/random" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>