...
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/favorites_appbar"
            app:title="@string/favorites"
            app:titleTextColor="@color/white" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/favoritesRecycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favoritesToolbar"
            app:spanCount="2"
            tools:itemCount="6"
            tools:listitem="@layout/favorite_item" />

        <TextView
            android:id="@+id/noFavoritesView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_no_favorites"
            android:textSize="@dimen/medium_text_size"
            android:visibility="gone"
            app:drawableTopCompat="@drawable/ic_movie_200"
...
